# udacity-laptop

./: README.md
data_stream/: 01_kafka_producer_avro_schema.py  02_kafka_consumer_avro_schema.py  03_faust_consumer.py  04_kafka_rest_proxy.py  05_kafka_rest_proxy_json_producer.py  06_kafka_rest_proxy_avro_producer.py  docker-compose.yaml  pyproject.toml  test_oop.py
data_stream/data_project_bus/starter/: docker-compose.yaml  pyproject.toml
data_stream/spark/: 01_spark_kafka_streamig.py  02_spark_streamig_word_count.py  03_spark_parse_kafka_json.py  04_spark_views.py  atm_withdrawals.json  bank-deposits.json  docker-compose.yaml  json_kafka_generator.py  spark_emr_cluster.pem
data_stream/spark/kafka_data/: log-start-offset-checkpoint  meta.properties  replication-offset-checkpoint
glue/Data_Lake_aws/: accelerometer_landing_to_trusted_zone.py  customer_landing_to_trusted.py  customer_trusted_to_curated.py  step_trainer_landing_to_trusted.py  trainer_trusted_to_curated.py
python/: 01_python_advanced.py  02_python_oop.py
