[tool.poetry]
name = "data-stream"
version = "0.1.0"
description = ""
authors = ["AsaelSolorio <solorioasael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.5.0"
faker = "^26.0.0"
requests = "^2.32.3"
fastavro = "^1.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
