[tool.poetry]
name = "optimizing-transportation"
version = "0.1.0"
description = ""
authors = ["AsaelSolorio <solorioasael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.5.0"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
